# HAB_ADCS_SIM

./: README.md  pyproject.toml
HAB-ADCS-Sim/sim_tools/: actuator.py  disturbance.py
HAB-ADCS-Sim/sim_tools/sim_params/: parameters.json  wind_params.json
config/sim_params/: parameters.json  parameters_ec60.json  parameters_new.json
sim_tools/: controller.py  disturbance.py  integrator.py  sim.py
sim_tools/sim_params/: parameters.json
src/hab_adcs_sim/: animation.py  sim.py
src/hab_adcs_sim/results/: rms_error.py
src/sim_tools/: actuator.py  controller.py  disturbance.py  integrator.py  sensor.py
