[project]
name = "hab-adcs-sim"
version = "0.1.0"
description = ""
authors = [
    {name = "Yorgo",email = "abouhaidar.yorgo@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy (>=2.4.0,<3.0.0)",
    "pychrono (>=1.1.0,<2.0.0)",
    "chrono (>=1.0.2,<2.0.0)",
    "pydy (>=0.8.0,<0.9.0)",
    "sympy (>=1.14.0,<2.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "click (>=8.3.1,<9.0.0)",
    "plotly (>=6.5.1,<7.0.0)",
    "scipy (>=1.16.3,<2.0.0)",
    "pandas (>=2.3.3,<3.0.0)"
]

[tool.poetry]
packages = [{include = "hab_adcs_sim", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
